--- a/jobs.html
+++ b/jobs.html
@@ -9,10 +9,49 @@
 <body>
     <h1>Jobs</h1>
     <div>
-        <ul>
-            <li>Job 1</li>
-            <li>Job 2</li>
-        </ul>
-    </div>
+         <img src="./job5.jpg" alt="">
+            <img src="./job1.jpg" alt="">
+            <img src="./job2.jpg" alt="">
+            <img src="./job3.jpg" alt="">
+            <img src="./job4.jpg" alt="">
+          
+        <h2>
+            I've had many offers for management but I didnt want to commit to the extra responsibilities.
+            I did accept crew trainer position.
+            Most thing I've achieved is employee of the week or month.
+        <ul>  
+            <li>Nanny</li>
+            <ol>feed and bathe and dress kids</ol>
+            <ol>babysit while the mom was unavalible</ol>
+            <ol>help with chores</ol>
+            <li>McDonald's</li>
+            <ol>cashier</ol>
+            <ol>crew trainer</ol>
+            <ol>customer service</ol>
+            <ol>cook</ol>
+            <li>Coldwater Creek</li>
+            <ol>answer phone calls and place catalog orders</ol>
+            <ol>customer service</ol>
+            <li>YMCA</li>
+            <ol>customer service</ol>
+            <ol>wash and fold towels</ol>
+            <ol>facility tours</ol>
+            <ol>answer and provide information and direct phone calls</ol>
+            <li>Aramark</li>
+            <ol>cashier</ol>
+            <ol>crew trainer</ol>
+            <ol>customer service</ol>
+            <ol>cook's help</ol>
+            <ol>cook</ol>
+        </ul>   
+            <div>
+                
+
+        </h2>
+
+
+
+
+
 </body>
 </html>
