--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
-<a href="http://"></a>
+<a href="jobs.html">Jobs</a>
+<a href="education.html">Education</a>
 
 <body><h1>Amber McClendon</h1>
     <img src="https://scontent.fosu1-1.fna.fbcdn.net/v/t1.6435-9/64645642_1258791287603963_4916288715422171136_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=qHidUv7dQbEAX9a5kms&_nc_ht=scontent.fosu1-1.fna&oh=37989a714be4be263cbf7366414f248e&oe=60DF4D65" alt="none">
-    <h2>I was a braid's maid at my brother's wedding 2 years ago</h2>
+    <h2>I was a bride's maid at my brother's wedding 2 years ago</h2>
     <ul>Important dates
         <li>1991-born in Cincinnati
             <li>1998-Moved to Dayton/Trotwood</li>
@@ -28,13 +28,13 @@
     </ul>
     <ol>Facts about me</ol>
     <li>History, puzzles and brain teaser</li>
-    <li>THE METAL!, hiphop/trap, classical, new age classical, kids music and r&b</li>
+    <li>THE METAL!, hiphop/trap, classical, kids music and r&b</li>
     <li>Gaming</li>
     <li>Sports</li>
     <li>Cars</li>
     <li>Cooking</li>
     <a href="https://www.linkedin.com/in/amber-mcclendon-048a13215/">linkedin</a>
-    <a href="jobs.html">Jobs</a>
+    
     </body>
     
 </body>
