--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="jobs.html">Jobs</a>
-<a href="education.html">Education</a>
+<a href="./jobs.html">Jobs</a>
+<a href="./education.html">Education</a>
 
 <body><h1>Amber McClendon</h1>
     <img src="https://scontent.fosu1-1.fna.fbcdn.net/v/t1.6435-9/64645642_1258791287603963_4916288715422171136_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=qHidUv7dQbEAX9a5kms&_nc_ht=scontent.fosu1-1.fna&oh=37989a714be4be263cbf7366414f248e&oe=60DF4D65" alt="none">
