--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <a href="./jobs.html">Jobs</a>
 <a href="./education.html">Education</a>
 
@@ -13,7 +15,7 @@
     <img src="https://scontent.fosu1-1.fna.fbcdn.net/v/t1.6435-9/64645642_1258791287603963_4916288715422171136_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=qHidUv7dQbEAX9a5kms&_nc_ht=scontent.fosu1-1.fna&oh=37989a714be4be263cbf7366414f248e&oe=60DF4D65" alt="none">
     <h2>I was a bride's maid at my brother's wedding 2 years ago</h2>
     <ul>Important dates
-        <li>1991-born in Cincinnati
+        <li>1991-born in Cincinnati</li>
             <li>1998-Moved to Dayton/Trotwood</li>
             <li>2008-Moved back to Cincinnati </li>
             <li>2010-Graduated from Woodward High and became live in nanny</li>
@@ -26,13 +28,14 @@
             <li>2021-3rd family vaction in Myrtle Beach, started Web Dev Bootcamp</li>
         </li>
     </ul>
-    <ol>Facts about me</ol>
+    <ol>Facts about me
     <li>History, puzzles and brain teaser</li>
     <li>THE METAL!, hiphop/trap, classical, kids music and r&b</li>
     <li>Gaming</li>
     <li>Sports</li>
     <li>Cars</li>
     <li>Cooking</li>
+</ol>
     <a href="https://www.linkedin.com/in/amber-mcclendon-048a13215/">linkedin</a>
     
     </body>
